--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="contact.css">
+</head>
+<body>
 <form id="form">
     <div id="lgform">
         <h3>Email</h3>
@@ -11,3 +20,7 @@
         <button type="submit">Login</button>
     </div>
 </form>
+</body>
+</html>
+    
+    
